--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,13 +2,13 @@
 # defaults file for website-deployer
 
 project_name: default
-git_repo_full:
-  https://{{ gitops_puller_username | urlencode }}:{{ gitops_puller_password |
-  urlencode }}@{{gitops_repo}}
+repo_full:
+  https://{{ src_username | urlencode }}:{{ src_password |
+  urlencode }}@{{ src_repo }}
 branch_name: master
 
-home_folder: C:\Users\<Windows host username>
-gitops_folder: '{{ home_folder }}\{{ project_name }}'
+home_folder: C:\Users\ansible
+src_folder: '{{ home_folder }}\{{ project_name }}'
 
 docker_repo: <image repository>
 docker_image_path: '<image path>'
